небольшой рефакторинг