@@ -1,11 +1,14 @@
 package ru.cbgr.adapter.xwiki.service;
 
 import java.util.List;
+import java.util.TreeMap;
+import java.util.stream.Collectors;
 
 import com.pgvector.PGvector;
 
 import org.springframework.ai.embedding.Embedding;
 import org.springframework.ai.embedding.EmbeddingResponse;
+import org.springframework.dao.EmptyResultDataAccessException;
 import org.springframework.jdbc.core.JdbcTemplate;
 import org.springframework.stereotype.Service;
 
@@ -45,7 +48,7 @@ public class SearchService {
         }
 
         // Берем первый эмбеддинг (если их несколько)
-        List<Double> output = embeddings.get(0).getOutput();
+        List<Double> output = embeddings.getFirst().getOutput();
         float[] vector = new float[output.size()];
         for (int i = 0; i < output.size(); i++) {
             vector[i] = output.get(i).floatValue();
@@ -91,7 +94,94 @@ public class SearchService {
                 queryVector, limit
         );
 
+        // Расширяем контекст каждого найденного результата
+        for (DocumentEmbeddingDto dto : results) {
+            dto.setTextSnippet(getExtendedTextSnippet(dto));
+        }
+
         return results;
+    }
+
+    /**
+     * Расширяет text_snippet, добавляя соседние чанки, до достижения 1000 символов.
+     * Используется TreeMap для хранения чанков с сортировкой по индексу,
+     * что обеспечивает правильный порядок объединения фрагментов.
+     *
+     * @param dto DTO с информацией о найденном документе и индексом чанка
+     * @return расширенный текстовый фрагмент, длина которого не меньше 1000 символов,
+     *         либо максимально возможный, если соседние чанки отсутствуют
+     */
+    private String getExtendedTextSnippet(DocumentEmbeddingDto dto) {
+        final int TARGET_LENGTH = 2000;
+        // Используем TreeMap для хранения чанков: ключ – chunk_index, значение – текст чанка
+        TreeMap<Integer, String> chunksMap = new TreeMap<>();
+        int currentIndex = dto.getChunkIndex();
+        // Добавляем исходный чанк
+        chunksMap.put(currentIndex, dto.getTextSnippet());
+
+        // Инициируем указатели для предыдущего и следующего чанка
+        int prevIndex = currentIndex - 1;
+        int nextIndex = currentIndex + 1;
+
+        // Собираем расширенный текст из текущего содержимого чанков
+        String extendedText = joinChunks(chunksMap);
+
+        // Расширяем, пока суммарная длина текста меньше TARGET_LENGTH
+        while (extendedText.length() < TARGET_LENGTH) {
+            boolean added = false;
+
+            // Пытаемся добавить предыдущий чанк (если он существует)
+            String prevSnippet = fetchChunkSnippet(dto.getDocumentId(), prevIndex);
+            if (prevSnippet != null && !prevSnippet.isBlank()) {
+                chunksMap.put(prevIndex, prevSnippet);
+                prevIndex--;
+                added = true;
+            }
+            extendedText = joinChunks(chunksMap);
+            if (extendedText.length() >= TARGET_LENGTH) break;
+
+            // Пытаемся добавить следующий чанк (если он существует)
+            String nextSnippet = fetchChunkSnippet(dto.getDocumentId(), nextIndex);
+            if (nextSnippet != null && !nextSnippet.isBlank()) {
+                chunksMap.put(nextIndex, nextSnippet);
+                nextIndex++;
+                added = true;
+            }
+            extendedText = joinChunks(chunksMap);
+
+            // Если ни один соседний чанк не найден, прерываем расширение
+            if (!added) {
+                break;
+            }
+        }
+        return extendedText.trim();
+    }
+
+    /**
+     * Объединяет тексты чанков в единый текстовый фрагмент в порядке возрастания chunk_index.
+     *
+     * @param chunksMap TreeMap с чанками
+     * @return объединённая строка
+     */
+    private String joinChunks(TreeMap<Integer, String> chunksMap) {
+        return chunksMap.values().stream()
+                .collect(Collectors.joining(" "));
+    }
+
+    /**
+     * Получает текстовый фрагмент для заданного документа и индекса чанка.
+     *
+     * @param documentId идентификатор документа
+     * @param chunkIndex индекс чанка
+     * @return текстовый фрагмент или null, если чанк не найден
+     */
+    private String fetchChunkSnippet(String documentId, int chunkIndex) {
+        String sql = "SELECT text_snippet FROM document_embeddings WHERE document_id = ? AND chunk_index = ?";
+        try {
+            return jdbcTemplate.queryForObject(sql, String.class, documentId, chunkIndex);
+        } catch (EmptyResultDataAccessException ex) {
+            return null;
+        }
     }
 
     /**
